objects/SupportTest__c.object
<CustomObject>
    <fields>
        <fullName>SupportTestDesc__c</fullName>
        <label>SupportTestDesc</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportTestFielName__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SupportTests</relationshipLabel>
        <relationshipName>SupportTests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>test1__c</fullName>
        <label>test1</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <label>test2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SupportTest</label>
    <nameField>
        <label>SupportTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SupportTests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>